# loverboxd

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-22-dashboard-chapter-reorg.md
docs/superpowers/specs/: 2026-04-21-dashboard-chapter-reorg-design.md
loverboxd/: __init__.py  api.py  cli.py  csv_import.py  match.py  rss.py  scraper.py  stats.py
web/: next.config.ts  package-lock.json  package.json
web/app/: csv-utils.ts  dashboard.tsx  globals.css  layout.tsx  page.tsx
web/app/api/: cache.ts  cf-cookies.ts  cf-fetch.ts
web/app/api/_lib/: fetch-letterboxd.ts
web/app/api/film-details/: route.ts
web/app/api/match/: route.ts
web/app/api/person-lookup/: route.ts
web/app/api/resolve-slugs/: route.ts
web/app/api/search/: route.ts
web/app/api/stats/: demo-data.json  route.ts
web/app/components/: Chapter.tsx  ChapterHero.tsx  ChapterMural.tsx  PosterRibbon.tsx  RevealCard.tsx  StickyNav.tsx  WorldHeatMap.tsx
web/app/hooks/: useCountUp.ts  useRevealOnScroll.ts
web/app/lib/: chapter-data.ts
web/app/products/nad/: page.tsx
web/app/products/sermorelin/: page.tsx
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/src/: index.ts
