[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loverboxd"
version = "0.1.0"
description = "Unofficial Letterboxd stats & user-matching toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "feedparser>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
loverboxd = "loverboxd.cli:app"

[tool.ruff]
line-length = 100
